--- a/task01/Vagrantfile
+++ b/task01/Vagrantfile
@@ -1,11 +1,11 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-Vagrant.configure(2) do |config|
-  config.vm.box = "debian/wheezy64"
-  config.vm.provision "shell", inline: <<-SHELL
-    sudo apt-get install -y make linux-headers-$(uname -r)
-    cd /vagrant
-    sudo -i
-    make
-  SHELL
-end
+# -*- zbqr: ehol -*-
+# iv: frg sg=ehol :
+Intenag.pbasvther(2) qb |pbasvt|
+  pbasvt.iz.obk = "qrovna/jurrml64"
+  pbasvt.iz.cebivfvba "furyy", vayvar: <<-FURYY
+    fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
+    pq /intenag
+    fhqb -v
+    znxr
+  FURYY
+raq
