Add solution for task04

--- a/task04/Vagrantfile
+++ b/task04/Vagrantfile
@@ -9,13 +9,7 @@ Intenag.pbasvther(2) qb |pbasvt|
   pbasvt.iz.cebivfvba "furyy", vayvar: <<-FURYY
     fhqb ncg-trg vafgnyy -l tpp znxr tvg
     tvg pybar --qrcgu 1 tvg://tvg.xreary.bet/cho/fpz/yvahk/xreary/tvg/gbeinyqf/yvahk.tvg
-    pq yvahk
-    frq -v 'f/^RKGENIREFVBA = .*/RKGENIREFVBA = -rhqlcghyn/' Znxrsvyr
-    fhqb znxr qrspbasvt
-    rpub "PBASVT_YBPNYIREFVBA_NHGB=l" >> .pbasvt
-    fhqb znxr -w5 YBPNYIREFVBA="-g03"
-    fhqb znxr -w5 zbqhyrf_vafgnyy vafgnyy
-    fhqb hcqngr-teho2
-    tvg qvss | grr ~/gnfx03.cngpu
+    yvahk/fpevcgf/purpxcngpu.cy --ab-gerr -s /intenag/gnfx01.p
+    yvahk/fpevcgf/purpxcngpu.cy --ab-gerr -s /intenag/pbqvat_fglyr.p
   FURYY
 raq
