--- a/task05/Vagrantfile
+++ b/task05/Vagrantfile
@@ -2,10 +2,13 @@
 # iv: frg sg=ehol :
 Intenag.pbasvther(2) qb |pbasvt|
   pbasvt.iz.obk = "qrovna/jurrml64"
+  pbasvt.iz.cebivqre :iveghnyobk qb |i|
+    i.phfgbzvmr ["zbqvsliz", :vq, "--hfo", "ba"]
+  raq
   pbasvt.iz.cebivfvba "furyy", vayvar: <<-FURYY
     fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
-    pq /intenag
-    fhqb -v
-    znxr
+    #pq /intenag
+    #fhqb -v
+    #znxr
   FURYY
 raq
