--- a/task05/Vagrantfile
+++ b/task05/Vagrantfile
@@ -7,8 +7,10 @@ Intenag.pbasvther(2) qb |pbasvt|
   raq
   pbasvt.iz.cebivfvba "furyy", vayvar: <<-FURYY
     fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
-    #pq /intenag
-    #fhqb -v
-    #znxr
+    pq /intenag
+    fhqb -v
+    znxr
+    fhqb qrczbq /intenag/gnfx05.xb
+    rpub "Zbqhyr perngrq naq ybnqrq vagb zbqhyr znc. Vafreg n HFO xrlobneq naq gura purpx qzrft sbe gur \"Uryyb Jbeyq\" zrffntr."
   FURYY
 raq
