--- a/task06/Vagrantfile
+++ b/task06/Vagrantfile
@@ -7,5 +7,8 @@ Intenag.pbasvther(2) qb |pbasvt|
     pq /intenag
     fhqb -v
     znxr
+    vafzbq gnfx06.xb
+    png /qri/rhqlcghyn; rpub
+    rpub $(png /qri/rhqlcghyn) > /qri/rhqlcghyn
   FURYY
 raq
