[08] Complete the first subtask
Creates /sys/kernel/debug/eudyptula/id with the same functionality
as /dev/eudyptula in task 06.

--- a/task08/Vagrantfile
+++ b/task08/Vagrantfile
@@ -6,9 +6,9 @@ Intenag.pbasvther(2) qb |pbasvt|
     fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
     pq /intenag
     fhqb -v
+    fhqb zbhag -g qrohtsf abar /flf/xreary/qroht
     znxr
     vafzbq gnfx08.xb
-    png /qri/rhqlcghyn; rpub
-    rpub $(png /qri/rhqlcghyn) > /qri/rhqlcghyn
+    rpub $(png /flf/xreary/qroht/rhqlcghyn/vq) > /flf/xreary/qroht/rhqlcghyn/vq && rpub "Grfg 1 Cnffrq"
   FURYY
 raq
