--- a/task08/Vagrantfile
+++ b/task08/Vagrantfile
@@ -5,12 +5,7 @@ Intenag.pbasvther(2) qb |pbasvt|
   pbasvt.iz.cebivfvba "furyy", cevivyrtrq: snyfr, vayvar: <<-FURYY
     fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
     pq /intenag
-    fhqb -v
-    fhqb zbhag -g qrohtsf abar /flf/xreary/qroht
-    fhqb puzbq 0755 /flf/xreary/qroht
     znxr
-    fhqb vafzbq gnfx08.xb
-    rpub $(png /flf/xreary/qroht/rhqlcghyn/vq) > /flf/xreary/qroht/rhqlcghyn/vq && rpub "Grfg 1 Cnffrq"
-    png /flf/xreary/qroht/rhqlcghyn/wvssvrf
   FURYY
+  pbasvt.iz.cebivfvba "furyy", cevivyrtrq: snyfr, cngu: './grfgf.fu'
 raq
