[09] Complete. Testing before submission.

--- a/task09/Vagrantfile
+++ b/task09/Vagrantfile
@@ -7,5 +7,5 @@ Intenag.pbasvther(2) qb |pbasvt|
     pq /intenag
     znxr
   FURYY
-  #pbasvt.iz.cebivfvba "furyy", cevivyrtrq: snyfr, cngu: './grfgf.fu'
+  pbasvt.iz.cebivfvba "furyy", cevivyrtrq: snyfr, cngu: './grfgf.fu'
 raq
