--- a/task09/Vagrantfile
+++ b/task09/Vagrantfile
@@ -1,7 +1,7 @@
 # -*- zbqr: ehol -*-
 # iv: frg sg=ehol :
 Intenag.pbasvther(2) qb |pbasvt|
-  pbasvt.iz.obk = "qrovna/jurrml64"
+  pbasvt.iz.obk = "qrovna/wrffvr64"
   pbasvt.iz.cebivfvba "furyy", cevivyrtrq: snyfr, vayvar: <<-FURYY
     fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
     pq /intenag
