[12] Works, need to cleanup before submission
 - Do some more error checking
 - Make sure I'm using best practices wrt memory management

--- a/task12/Makefile
+++ b/task12/Makefile
@@ -1,4 +1,6 @@
 bow-z += gnfx12.b
+# Ranoyr QROHT zrffntrf fb jr pna frr bhgchg bs ce_qroht pnyy
+PSYNTF_gnfx12.b := -QQROHT
 
 XQVE ?= /yvo/zbqhyrf/$(furyy hanzr -e)/ohvyq
 
