--- a/task13/Vagrantfile
+++ b/task13/Vagrantfile
@@ -9,5 +9,6 @@ Intenag.pbasvther(2) qb |pbasvt|
     znxr
     vafzbq ./gnfx13.xb
     qzrft | gnvy
+    terc shaxl_ohggybiva /cebp/fynovasb
   FURYY
 raq
