[17] WIP: Implement threading

--- a/task17/Vagrantfile
+++ b/task17/Vagrantfile
@@ -8,5 +8,7 @@ Intenag.pbasvther(2) qb |pbasvt|
     fhqb -v
     znxr
     vafzbq gnfx17.xb
+    yf -y /qri/rhqlcghyn
+    cf -rs | terc rhqlcghy[n]
   FURYY
 raq
