[18] Compare global_id for condition var

--- a/task18/Vagrantfile
+++ b/task18/Vagrantfile
@@ -7,6 +7,7 @@ Intenag.pbasvther(2) qb |pbasvt|
     pq /intenag
     fhqb -v
     znxr
+    rpub 8 > /cebp/flf/xreary/cevagx
     vafzbq ./gnfx18.xb
     qzrft | gnvy
   FURYY
