--- a/task18/Vagrantfile
+++ b/task18/Vagrantfile
@@ -7,8 +7,6 @@ Intenag.pbasvther(2) qb |pbasvt|
     pq /intenag
     fhqb -v
     znxr
-    rpub 8 > /cebp/flf/xreary/cevagx
-    vafzbq ./gnfx18.xb
-    qzrft | gnvy
+    /intenag/grfg.fu
   FURYY
 raq
