--- a/task20/Vagrantfile
+++ b/task20/Vagrantfile
@@ -1,12 +1,23 @@
 # -*- zbqr: ehol -*-
 # iv: frg sg=ehol :
 Intenag.pbasvther(2) qb |pbasvt|
-  pbasvt.iz.obk = "qrovna/wrffvr64"
-  pbasvt.iz.cebivfvba "furyy", vayvar: <<-FURYY
-    fhqb ncg-trg vafgnyy -l znxr yvahk-urnqref-$(hanzr -e)
-    pq /intenag
-    fhqb -v
-    znxr
-    /intenag/grfg.fu
+  # qrovna/wrffvr64 bayl pbzrf jvgu 10TO juvpu jnfa'g rabhtu gb pbzcvyr
+  pbasvt.iz.obk = "rivqraprcevzr/wrffvr64"
+  pbasvt.iz.cebivqre "iveghnyobk" qb |i|
+    i.zrzbel = 1024
+    i.pchf = 2
+  raq
+  pbasvt.iz.cebivfvba "furyy", cevivyrtrq: gehr, vayvar: <<-FURYY
+    frg -r
+    XREARY_IREFVBA=3.16
+    ncg-trg hcqngr
+    ncg-trg vafgnyy -l tpp znxr tvg yvahk-fbhepr ivz qbfsfgbbyf
+    gne -P /hfe/fep/ -ks /hfe/fep/yvahk-fbhepr-${XREARY_IREFVBA}.*
+    pq /hfe/fep/yvahk-fbhepr-${XREARY_IREFVBA}
+    cngpu -c1 < /intenag/0001-Nqq-vbpgy-gb-frg-SNG-ibyhzr-ynory.cngpu
+    znxr qrspbasvt
+    znxr -w3
+    znxr -w3 zbqhyrf_vafgnyy vafgnyy
+    rpub; rpub "Arj xreary vafgnyyrq. Erobbg naq eha grfg.fu!"; rpub
   FURYY
 raq
